# cargo-actions

./: .gitignore  Cargo.toml  README.md  build.rs  gen_schema.sh
.github/workflows/: CI.yaml  publish crate.yaml  publish-crate.yaml  release.yaml
actions-templates/: Cargo.toml
actions-templates/src/: config.rs  lib.rs  readme.rs  template.rs
actions-templates/src/prompts/: confirm.rs  input.rs  mod.rs  multiselect.rs  select.rs
actions/mdbook/: README.md  cargo-action.json  mdbook.yaml.hbs
actions/publish/: README.md  cargo-action.json  publish-crate.yaml.hbs
actions/release/: cargo-action.json  release.yaml.hbs  test.yaml
actions/web-deploy/: README.md  cargo-action.json  web-deploy.yaml.hbs
guide/: book.toml
schemas/: main.graphql
src/: client.rs  git.rs  lib.rs  logs.rs  main.rs  path_configs.rs  spinner.rs  token.rs  utils.rs
src/check/: mod.rs
src/config/: mod.rs  prompt.rs
src/favorite/: mod.rs
src/favorites/: add.rs  mod.rs  remove.rs
src/favorites/config/: git.rs  local.rs  mod.rs
src/graphql/: mod.rs
src/init/: mod.rs  use_template_id.rs
src/login/: mod.rs  temp_server.rs
src/mine/: mod.rs
src/upload/: mod.rs
