[package]
name = "cargo-actions"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "cargo, create a CI github action"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
console = "0.15.8"
dialoguer = "0.11.0"
fs_extra = "1.3.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.112"
serde_yaml = "0.9.30"
walkdir = "2.4.0"
toml = "0.8.8"
tempfile = "3.9.0"
git2 = "0.18.1"
git2_credentials = "0.13.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-indicatif = "0.3.6"
prettytable-rs = "0.10.0"
glob = "0.3.1"
md5 = "0.7.0"
handlebars = { version = "5.1.0", features = ["no_logging"] }
ratatui = "0.26.0"
crossterm = "0.27.0"
once_cell = "1.19.0"




[[bin]]
path = "src/main.rs"
name = "cargo-actions"

[profile.release]
lto = true
opt-level = 3
