
[package]
name = "cargo-actions"
version = "0.3.4"
edition = "2021"
license = "MIT"
keywords = ["Github Actions", "CLI"]
description = "cargo, create a CI github action"
repository = "https://github.com/yexiyue/yexiyue/cargo-actions"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
console = "0.15.8"
dialoguer = "0.11.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.112"
walkdir = "2.4.0"
tempfile = "3.9.0"
git2 = "0.18.1"
git2_credentials = "0.13.0"
once_cell = "1.19.0"
actions-templates = { path = "./actions-templates", version = "^0.1.0" }
reqwest = { version = "0.12.4", features = ["json"] }
tokio = "1.37.0"
axum = "0.7.5"
open = "5.1.2"
tower-http = { version = "0.5.2", features = ["cors"] }
tokio-util = "0.7.11"
cynic = { version = "3.7.1", features = [
    "reqwest",
    "http-reqwest",
    "serde_json",
] }
cynic-codegen = "3.7.1"
dialogue-macro = "0.3.2"


[[bin]]
path = "src/main.rs"
name = "cargo-actions"

[profile.release]
lto = true
opt-level = 3

[workspace]
members = ["actions-templates"]

[build-dependencies]
cynic-codegen = "3.7.1"
